--- a/web/src/components/waterfall-flow/index.less
+++ b/web/src/components/waterfall-flow/index.less
@@ -1,9 +1,37 @@
+// @media screen and (max-width: 1300px) {
+//   .waterfall-flow {
+//     width: 950px;
+//   }
+// }
+
+// @media screen and (min-width: 1300px) {
+//   .waterfall-flow {
+//     width: 1260px;
+//   }
+// }
+// @media screen and (min-width: 1600px) {
+//   .waterfall-flow {
+//     width: 1580px;
+//   }
+// }
+
 .waterfall-flow {
+  margin: auto;
   min-width: 950px;
+  display: flex;
+  flex-direction: row;
+
+  .column {
+    display: flex;
+    flex-direction: column;
+    background-color: burlywood;
+    margin: 20px;
+  }
 
   .item {
+    display: flex;
     background-color: #ffffff;
-    margin: 20px;
+    margin: 10px;
     padding: 10px;
     box-sizing: border-box;
     box-shadow: 10px 10px 7px rgba(0, 0, 0, 0.2);
@@ -11,7 +39,8 @@
   }
   img {
     width: 100%;
+    object-fit: contain;
     display: block;
-    font-size: 16px;
+    // font-size: 16px;
   }
 }
