--- a/web/src/components/waterfall-flow/index.less
+++ b/web/src/components/waterfall-flow/index.less
@@ -23,6 +23,7 @@
 
   .column {
     display: flex;
+    flex: 1;
     flex-direction: column;
     background-color: burlywood;
     margin: 20px;
@@ -30,17 +31,17 @@
 
   .item {
     display: flex;
+    flex: 1;
     background-color: #ffffff;
     margin: 10px;
     padding: 10px;
     box-sizing: border-box;
     box-shadow: 10px 10px 7px rgba(0, 0, 0, 0.2);
     display: inline-block;
-  }
-  img {
-    width: 100%;
-    object-fit: contain;
-    display: block;
-    // font-size: 16px;
+    img {
+      width: 100%;
+      display: block;
+      // font-size: 16px;
+    }
   }
 }
