--- a/web/src/pages/home/index.less
+++ b/web/src/pages/home/index.less
@@ -1,3 +1,20 @@
 .page-home {
   text-align: center;
+
+  .item {
+    display: flex;
+    flex: 1;
+    background-color: #ffffff;
+    margin: 10px;
+    padding: 10px;
+    box-sizing: border-box;
+    box-shadow: 10px 10px 7px rgba(0, 0, 0, 0.2);
+    display: inline-block;
+
+    img {
+      width: 100%;
+      display: block;
+      // font-size: 16px;
+    }
+  }
 }
