--- a/web/src/pages/home/index.less
+++ b/web/src/pages/home/index.less
@@ -1,8 +1,11 @@
 .page-home {
   text-align: center;
+  overflow: auto;  
+  height: 100%; 
+  flex: 1;
 
   .item {
-    display: flex;
+    display: flex; 
     flex: 1;
     background-color: #ffffff;
     margin: 10px;
