--- a/web/src/components/nav/index.less
+++ b/web/src/components/nav/index.less
@@ -2,6 +2,8 @@
   background-color: #fff;
   text-align: center;
   box-shadow: 0px 1px 2px 0px rgba(179, 178, 179, 1);
+  height: 90px;
+  
   ul {
     width: 950px;
     height: 90px;
